--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -275,3 +275,9 @@ main {
 .hidden{
     display: none;
 }
+
+//Colored text
+.color-text{
+  color: $clr-primary-100;
+  font-style: italic;
+}
